# flight_radar

./: .metadata  README.md  add_config.yaml  cJSON.config.yaml  privach-policy.md  pubspec.yaml
android/: CMakeLists.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flight_radar/: MainActivity.kt
android/cpp/: na.cpp  na.hpp
ios/: na.cpp  na.hpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  native_add.dart  router.dart
lib/models/: flight_info.dart
lib/screens/: bottom_navbar.dart  home_screen.dart  profile_screen.dart  search_screen.dart
lib/services/: flight_service.dart
lib/utilis/: native_add.dart  router.dart
lib/widgets/: booking_sheet.dart  date_picker.dart  flight_search_bar.dart  fligt_view.dart  scaffold_with_navbar.dart  search_bar.dart
macos/: na.cpp  na.hpp
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/cJSON/: CMakeLists.txt
test/: widget_test.dart
